--- a/FiorellaProject/assets/Scss/style.scss
+++ b/FiorellaProject/assets/Scss/style.scss
@@ -724,3 +724,286 @@ li {
     }
 
 
+    main {
+
+        /////Home
+        #flowers3 {
+    
+            position: relative;
+    
+            .imagesSlide {
+                overflow: hidden;
+    
+                .imgScale {
+                    position: relative;
+    
+                    img {
+                        opacity: 0;
+                        position: relative;
+                        z-index: -2;
+                        animation: linear 0s normal none infinite running zoom;
+    
+                        animation-duration: 6s;
+                        width: 100%;
+                        height: 477px;
+                    }
+    
+                    @keyframes zoom {
+                        from {
+                            transform: scale(1);
+                        }
+    
+                        to {
+                            transform: scale(1.12);
+                        }
+                    }
+                }
+    
+                .clickright {
+                    position: absolute;
+                    transform: translate(1%, -50%);
+                    font-size: 45px;
+                    top: 50%;
+                    right: 1%;
+                    color: rgb(194, 194, 194);
+                    transition: 0.3s;
+                    transition-timing-function: ease-out;
+                    cursor: pointer;
+    
+                    &:hover {
+                        color: black;
+                    }
+                }
+    
+                .clickleft {
+                    position: absolute;
+                    transform: translate(1%, -50%);
+                    font-size: 45px;
+                    top: 50%;
+                    left: 1%;
+                    color: rgb(194, 194, 194);
+                    transition: 0.3s;
+                    transition-timing-function: ease-out;
+                    cursor: pointer;
+    
+                    &:hover {
+                        color: black;
+                    }
+    
+                }
+            }
+    
+            .flowersInfo {
+                margin-left: 5%;
+    
+                transition: 5.5s;
+                position: absolute;
+                top: 50%;
+                left: 5%;
+                transform: translate(5%, -50%);
+                width: 380px;
+    
+                .Infos {
+    
+                    justify-content: space-around;
+    
+                    .titleInfo {
+                        span {
+                            font-family: Georgia, 'Times New Roman', Times, serif;
+                            font-size: 50px;
+                            font-weight: 500;
+                            margin-left: 10px;
+                            font-weight: lighter;
+                            line-height: 1;
+    
+                            &:nth-child(2) {
+                                color: red;
+                            }
+                        }
+                    }
+    
+    
+                }
+    
+                .descInfo {
+                    margin-top: 25px;
+    
+                    p {
+                        opacity: 60%;
+                        padding-left: 10px;
+                        font-size: 14px;
+                    }
+                }
+    
+                .signatureInfo {
+                    padding-left: 10px;
+                    margin-top: 25px;
+    
+                    img {
+                        width: 190px;
+                    }
+                }
+    
+            }
+        }
+    
+    
+        #productList {
+            padding-bottom: 50px;
+            margin-top: 50px;
+    
+            .title-filter {
+                .productTitle {
+                    #productListCategory {
+                        display: none;
+                    }
+    
+                    ul {
+    
+                        margin-bottom: 20px;
+    
+                        li {
+                            list-style: none;
+    
+                            a {
+                                text-decoration: none;
+                                color: grey;
+                                font-size: 12px;
+                            }
+                        }
+                    }
+    
+                    #dropDownCategory {
+                        width: 200px;
+                        height: 300px;
+                        background-color: white;
+                        position: relative;
+                        bottom: 15px;
+                        z-index: 15265541;
+                        display: none;
+                        max-height: 160px;
+    
+                        .flowerTypes {
+                            li {
+                                a {
+                                    color: black;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+    
+            .products {
+                justify-content: space-around;
+                .product {
+    
+                    &:hover .text {
+                        opacity: 1;
+                        transform: translateX(10px);
+                        transition: 0.3s;
+                    }
+    
+                    &:hover .price {
+                        transform: translateX(100px);
+                        opacity: 0;
+                        transition: 0.3s;
+                    }
+    
+                    .text {
+                        transform: translateX(-100px);
+                        opacity: 0;
+                        transition: 0.3s;
+                    }
+    
+                    cursor: pointer;
+                    margin-top: 15px;
+    
+                    .image {
+                        overflow: hidden;
+                        position: relative;
+    
+                        .sale {
+                            span {
+                                color: black;
+    
+                            }
+    
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            width: 60px;
+                            height: 29px;
+                            background-color: white;
+                            position: absolute;
+                            top: 10px;
+                            left: 10px;
+                            text-align: center;
+                            z-index: 10;
+                        }
+    
+                        .sold {
+                            span {
+                                color: white;
+    
+                            }
+    
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            width: 60px;
+                            height: 29px;
+                            background-color: black;
+                            position: absolute;
+                            top: 15px;
+                            left: 15px;
+                            text-align: center;
+                            z-index: 10;
+                        }
+    
+                        &:hover {
+                            img {
+                                transform: scale(1.05);
+                            }
+                        }
+    
+                        img {
+                            transition: 0.3s;
+                            width: 295px;
+                            height: 380px;
+                        }
+                    }
+    
+                    .productName {
+                        font-size: 13px;
+                        margin-top: 10px;
+                        text-align: center;
+                        letter-spacing: 1.5px;
+    
+    
+                    }
+    
+                    .productPrice {
+                        width: 100%;
+                        font-size: 12px;
+                        margin-top: 10px;
+                        text-align: center;
+                        color: grey;
+    
+    
+    
+    
+                        .price {
+                            transition: 0.3s;
+                            position: relative;
+                            right: 35px;
+                        }
+    
+                    }
+    
+                }
+    
+            }
+        }
+    }
+    
