--- a/FiorellaProject/assets/css/style.css
+++ b/FiorellaProject/assets/css/style.css
@@ -731,4 +731,296 @@ nav .menuElements ul li {
 nav .menuElements ul li a {
   font-size: 12px;
 }
+
+main #flowers3 {
+  position: relative;
+}
+
+main #flowers3 .imagesSlide {
+  overflow: hidden;
+}
+
+main #flowers3 .imagesSlide .imgScale {
+  position: relative;
+}
+
+main #flowers3 .imagesSlide .imgScale img {
+  opacity: 0;
+  position: relative;
+  z-index: -2;
+  -webkit-animation: linear 0s normal none infinite running zoom;
+          animation: linear 0s normal none infinite running zoom;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  width: 100%;
+  height: 477px;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(1.12);
+            transform: scale(1.12);
+  }
+}
+
+@keyframes zoom {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(1.12);
+            transform: scale(1.12);
+  }
+}
+
+main #flowers3 .imagesSlide .clickright {
+  position: absolute;
+  -webkit-transform: translate(1%, -50%);
+          transform: translate(1%, -50%);
+  font-size: 45px;
+  top: 50%;
+  right: 1%;
+  color: #c2c2c2;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
+  cursor: pointer;
+}
+
+main #flowers3 .imagesSlide .clickright:hover {
+  color: black;
+}
+
+main #flowers3 .imagesSlide .clickleft {
+  position: absolute;
+  -webkit-transform: translate(1%, -50%);
+          transform: translate(1%, -50%);
+  font-size: 45px;
+  top: 50%;
+  left: 1%;
+  color: #c2c2c2;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
+  cursor: pointer;
+}
+
+main #flowers3 .imagesSlide .clickleft:hover {
+  color: black;
+}
+
+main #flowers3 .flowersInfo {
+  margin-left: 5%;
+  -webkit-transition: 5.5s;
+  transition: 5.5s;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  -webkit-transform: translate(5%, -50%);
+          transform: translate(5%, -50%);
+  width: 380px;
+}
+
+main #flowers3 .flowersInfo .Infos {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+main #flowers3 .flowersInfo .Infos .titleInfo span {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 50px;
+  font-weight: 500;
+  margin-left: 10px;
+  font-weight: lighter;
+  line-height: 1;
+}
+
+main #flowers3 .flowersInfo .Infos .titleInfo span:nth-child(2) {
+  color: red;
+}
+
+main #flowers3 .flowersInfo .descInfo {
+  margin-top: 25px;
+}
+
+main #flowers3 .flowersInfo .descInfo p {
+  opacity: 60%;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+main #flowers3 .flowersInfo .signatureInfo {
+  padding-left: 10px;
+  margin-top: 25px;
+}
+
+main #flowers3 .flowersInfo .signatureInfo img {
+  width: 190px;
+}
+
+main #productList {
+  padding-bottom: 50px;
+  margin-top: 50px;
+}
+
+main #productList .title-filter .productTitle #productListCategory {
+  display: none;
+}
+
+main #productList .title-filter .productTitle ul {
+  margin-bottom: 20px;
+}
+
+main #productList .title-filter .productTitle ul li {
+  list-style: none;
+}
+
+main #productList .title-filter .productTitle ul li a {
+  text-decoration: none;
+  color: grey;
+  font-size: 12px;
+}
+
+main #productList .title-filter .productTitle #dropDownCategory {
+  width: 200px;
+  height: 300px;
+  background-color: white;
+  position: relative;
+  bottom: 15px;
+  z-index: 15265541;
+  display: none;
+  max-height: 160px;
+}
+
+main #productList .title-filter .productTitle #dropDownCategory .flowerTypes li a {
+  color: black;
+}
+
+main #productList .products {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+main #productList .products .product {
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+main #productList .products .product:hover .text {
+  opacity: 1;
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main #productList .products .product:hover .price {
+  -webkit-transform: translateX(100px);
+          transform: translateX(100px);
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main #productList .products .product .text {
+  -webkit-transform: translateX(-100px);
+          transform: translateX(-100px);
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main #productList .products .product .image {
+  overflow: hidden;
+  position: relative;
+}
+
+main #productList .products .product .image .sale {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60px;
+  height: 29px;
+  background-color: white;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  text-align: center;
+  z-index: 10;
+}
+
+main #productList .products .product .image .sale span {
+  color: black;
+}
+
+main #productList .products .product .image .sold {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60px;
+  height: 29px;
+  background-color: black;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  text-align: center;
+  z-index: 10;
+}
+
+main #productList .products .product .image .sold span {
+  color: white;
+}
+
+main #productList .products .product .image:hover img {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+main #productList .products .product .image img {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 295px;
+  height: 380px;
+}
+
+main #productList .products .product .productName {
+  font-size: 13px;
+  margin-top: 10px;
+  text-align: center;
+  letter-spacing: 1.5px;
+}
+
+main #productList .products .product .productPrice {
+  width: 100%;
+  font-size: 12px;
+  margin-top: 10px;
+  text-align: center;
+  color: grey;
+}
+
+main #productList .products .product .productPrice .price {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  position: relative;
+  right: 35px;
+}
 /*# sourceMappingURL=style.css.map */
